WIP updated Session02 EDA from Mac 2

--- a/02-Exploratory Data Analysis.ipynb
+++ b/02-Exploratory Data Analysis.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "3a0c5dcb",
    "metadata": {},
    "outputs": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "182b2a5b",
    "metadata": {},
    "outputs": [
@@ -134,7 +134,7 @@
        "Name: Genre, dtype: object"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 3,
    "id": "48949b06",
    "metadata": {},
    "outputs": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 4,
    "id": "99b8fc64",
    "metadata": {},
    "outputs": [
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 5,
    "id": "4b1cc049",
    "metadata": {},
    "outputs": [],
@@ -286,12 +286,17 @@
    "id": "7374b5c1",
    "metadata": {},
    "source": [
-    "+ Excel files are frequently used as a data source in some contexts. For simple files, reading their content into a Pandas DataFrame is quite straightforward. But for more complex cases things can get more complicated. However, to keep things simple here we will use a simple file containing data about 2010 train accidents in the US. You can download the file (to the data folder) using [right-click in this link](http://users.stat.ufl.edu/~winner/data/train_acc_2010.xls). Then run this code to read the data:"
+    "+ Excel files are frequently used as a data source in some contexts. For simple files, reading their content into a Pandas DataFrame is quite straightforward. But for more complex cases things can get more complicated. However, to keep things simple here we will use a simple file containing data about 2010 train accidents in the US. You can download the file (to the data folder) using [right-click in this link](http://users.stat.ufl.edu/~winner/data/train_acc_2010.xls). \n",
+    "\n",
+    "+ First we need to install an additional module into the fmad environment. This will often be the case when reading data from other sources. Do you remember how to install new modules?\n",
+    "  **Exercise:** install the module called `xlrd` into the fmad environment.\n",
+    "\n",
+    "+ Then run this code to read the data:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 9,
    "id": "85036b5e",
    "metadata": {},
    "outputs": [
@@ -325,7 +330,9 @@
    "source": [
     "xlsx_file = './data/train_acc_2010.xls'\n",
     "\n",
-    "train_accidents = pd.read_excel(xlsx_file)"
+    "train_accidents = pd.read_excel(xlsx_file)\n",
+    "\n",
+    "print(train_accidents.head())"
    ]
   },
   {
