WIP 01-SoftwareSetup and small corrections in other files

--- a/01-Software_Setup_Windows_Version.ipynb
+++ b/01-Software_Setup_Windows_Version.ipynb
@@ -35,16 +35,9 @@
     "+ You should create a **specific folder** for this course under your user folder. Under Windows a typical location\n",
     "could be something like (the ellipsis represents possible intermediate folders):\n",
     "\n",
-    "    `C:/Users/your_user_folder/.../MasterBD/FMAD/`\n",
-    "    \n",
-    " while for MacOS users you should use something like: \n",
-    " \n",
-    "    `/Users/your_user_folder/.../MasterBD/FMAD/`\n",
-    "\n",
-    "  and finally for Linux it would be:\n",
-    "\n",
-    "    `/home/your_user_folder/.../MasterBD/FMAD/`\n",
-    "    \n",
+    "    `C:/Users/your_user_folder/.../MasterBD/FMAD/`  \n",
+    "        \n",
+    "          \n",
     "+ **The folder that you have created will always be referred to in these notes as the Course Folder**. In the above examples we named it `FMAD` but you can give it any name you want. As usual, it is a good idea to keep it short and meaningful (and free of spaces, unusual characters, etc.) \n",
     " \n",
     "+ We will be using Git and [GitHub](https://github.com) repositories for the Course Notes and Assignments. In particular, the following repository will be used to share all the common course material:  \n",
@@ -430,7 +423,13 @@
    "cell_type": "markdown",
    "id": "732175ab",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Jupyter extensions\n",
+    "\n",
+    "```\n",
+    "conda install -n fmad jupyter_contrib_nbextensions\n",
+    "```"
+   ]
   },
   {
    "cell_type": "markdown",
