--- a/01M-Software_Setup_MacOS_Version.ipynb
+++ b/01M-Software_Setup_MacOS_Version.ipynb
@@ -2,32 +2,50 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d362c974",
+   "id": "73017b73",
    "metadata": {},
    "source": [
-    "# Software Setup, Windows Version"
+    "# Software Setup, MacOS Version"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c083be26",
+   "id": "5d2b682b",
+   "metadata": {},
+   "source": [
+    "## <span style='background:yellow; color:red'> IMPORTANT NOTE</span>\n",
+    "\n",
+    "</br>\n",
+    "\n",
+    "<span style='color:red;font-weight:bold'> \n",
+    "IF YOU WILL BE USING A RECENT MAC WITH AN APPLE SILICON PROCESSOR FOR THIS COURSE (M1, M2 ans similar processors) PLEASE TALK TO US BEFORE INSTALLING THE SOFTWARE BELOW. AND IF YOU ARE NOT SURE, LOOK IN THE APPLE MENU FOR THE \"ABOUT THIS MAC\" INFORMATION.\n",
+    "</span>\n",
+    "\n",
+    "## Before you proceed\n",
+    "\n",
+    "+ Please, read this document completely before starting your setup, so as to get a general idea of what is coming. In particular, please read the final [*Alternative Setups*](#AlternativeSetups) section. If you have any doubts, we are happy to help.\n",
+    "+ **Be careful!** Another reason to read this document in advance is that we have seen too often users ruining their Python setups because of a rushed decision. Wrecking your system can be a matter of minutes, getting it back can take you hours or even days. \n",
+    "Don't let the cartoon below be you!! When in doubt, please talk to us first.\n",
+    "![](fig/XKCD_python_environment.png)  \n",
+    "\n",
+    "*Image from [XKCD](https://xkcd.com/1987/)* \n",
+    "\n",
+    "</br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d362c974",
    "metadata": {},
    "source": [
     "## Folder structure for the course\n",
     "\n",
-    "+ You should create a **specific folder** for this course under your user folder. Under Windows a typical location\n",
+    "+ You should create a **specific folder** for this course under your user folder. Under MacOS a typical location\n",
     "could be something like (the ellipsis represents possible intermediate folders):\n",
-    "\n",
-    "    `C:/Users/your_user_folder/.../MasterBD/FMAD/`\n",
-    "    \n",
-    " while for MacOS users you should use something like: \n",
     " \n",
-    "    `/Users/your_user_folder/.../MasterBD/FMAD/`\n",
+    "    `/Users/your_user_folder/.../MasterBD/FMAD/`  \n",
     "\n",
-    "  and finally for Linux it would be:\n",
     "\n",
-    "    `/home/your_user_folder/.../MasterBD/FMAD/`\n",
-    "    \n",
     "+ **The folder that you have created will always be referred to in these notes as the Course Folder**. In the above examples we named it `FMAD` but you can give it any name you want. As usual, it is a good idea to keep it short and meaningful (and free of spaces, unusual characters, etc.) \n",
     " \n",
     "+ We will be using Git and [GitHub](https://github.com) repositories for the Course Notes and Assignments. In particular, the following repository will be used to share all the common course material:  \n",
@@ -48,22 +66,23 @@
    "id": "a65226a4",
    "metadata": {},
    "source": [
+    "### Installing Homebrew\n",
+    "\n",
+    "+ [Homebrew](https://brew.sh) is a *package manager* for macOS (or Linux), widely used to install software which is harder to install or unavalaible in other channels, such as the Apple App Store for MacOS. Many programming languages and utilities are easy to install using Homebrew.\n",
+    "\n",
+    "+ To install Homebrew itself you just need to foloow the simple instructions in the *Install Homebrew* right at the top of the HomeBrew web page. But **before doing that** we highly recommend reading through the following section, called *What Does Homebrew Do?*. And in case you have any doubts please ask us before proceeding.\n",
+    "\n",
     "### Installing Git\n",
     "\n",
-    "**Important Note:** If you already have a working and recent setup of Git (current version is 2.37), skip to the [*Installing Anaconda Python*](#InstallingAnaconda) subsection.\n",
-    "\n",
-    "+ Install [Git for Windows](http://gitforwindows.org) using this link. When asked about \"Adjusting your PATH environment\", select *Git from the command line and also from 3rd-party software*. \n",
-    "  <img src=\"fig/007-InstallingGitForWindows01.png\" width=30%/>\n",
-    "  For all the rest of the setup it is ok to accept the defaults.\n",
-    "  \n",
-    "+ When the Git setup is completed hit the Windows key and begin typing *Git Bash*. You should see results like this: \n",
-    "  <img src=\"fig/007-InstallingGitForWindows02.png\" width=30%/>\n",
-    "  \n",
-    "  Open the *Git Bash* application. A new *terminal* window will appear with a prompt waiting for your commands. \n",
-    "  \n",
-    "  <img src=\"fig/007-InstallingGitForWindows03.png\" width=40%/>\n",
-    "  \n",
-    "  The details of the prompt (user and machine names) will be different in your case, of course. We will return here soon, but first we need a GitHub account."
+    "**Important Note:** If you already have a working and recent setup of Git (current version is 2.37), skip to the [*Installing Homebrew Python*](#InstallingHomebrewPython) subsection. If you do not know, open a terminal and try to run this command:\n",
+    "```\n",
+    "git --version\n",
+    "```\n",
+    "If you receive an error message then run:\n",
+    "```\n",
+    "brew install git\n",
+    "```\n",
+    "This will take some time. After the installation, try running  the `git --version` command again. \n"
    ]
   },
   {
@@ -83,15 +102,15 @@
    "source": [
     "### Clone the *common repository* \n",
     "\n",
-    "+ Using the *Git Bash terminal* navigate to the *Course Folder*. You can get there using the `cd` command. **Make sure that you have changed into the right folder before going further!!** You can use the `pwd` command to check your current location. Ask for help if you run into trouble.\n",
+    "+ Using the Terminal navigate to the *Course Folder*. You can get there using the `cd` command. **Make sure that you have changed into the right folder before going further!!** You can use the `pwd` command to check your current location. Ask for help if you run into trouble.\n",
     "\n",
     "+ In that folder run the following command:\n",
     "\n",
     "    `git clone https://github.com/mbdfmad/fmad2223.git`\n",
     "    \n",
-    "  Git will begin cloning (downloading) the contents of the repo to a folder named `fmad2223` in your computer. The process looks like this (the number of cloned objects will surely be greater in your case):\n",
+    "  Git will begin cloning (downloading) the contents of the repo to a folder named `fmad2223` in your computer. The process looks like this (the prompt and number of cloned objects will surely be greater in your case):\n",
     "  \n",
-    "    <img src=\"fig/008-CloningCourseRepo.png\" width=40%/>\n",
+    "    <img src=\"fig/008-CloningCourseRepoMacOS.png\" width=80%/>\n",
     "  \n",
     "  The `fmad2223` folder will then be a subfolder of the *Course Folder*. You should consider this `fmad2223` folder as a *read-only* folder. You will soon see how to update its contents as the course progresses, but **you are not expected to directly modify the contents of the `fmad2223` folder** (and you shouldn't). You can *copy* any object from this folder (e.g. the code examples that we will provide) to other locations in your computer if you want to make changes. Finally, if you are a seasoned Git user you can opt for a fork of the repo instead of cloning it. "
    ]
@@ -106,7 +125,7 @@
     "+ If you are used to auto syncing tools such as Dropbox, OneDrive, ICloud Drive and the like, you must keep in mind that **Git repos are not auto-syncing**. To keep the information in your repos updated you have to manually update them (both ways, from your computer to GitHub and viceversa).\n",
     "\n",
     "+ **This will be very important for our workflow in the lectures of the course.** So make sure to get it right, and ask for help soon if you need it. Every work session for this course will begin with the following ritual:\n",
-    "    + Open a *Terminal* (the Git Bash terminal or, see below, the Anaconda terminal are both ok).\n",
+    "    + Open a *Terminal*.\n",
     "    + Navigate to your local `fmad2223` folder. Do not confuse this with the *Course Folder*.\n",
     "    + Run `git status` to check that everything is ok. \n",
     "    + Run `git pull origin main`. Depending on the update status of your local copy of the repo you will either download the new contents from the repo at GitHub or you will receive a message saying that you are `Already up to  date`.  \n",
@@ -123,7 +142,7 @@
     "    \n",
     "### Setting up a local Git configuration for the Common Repository\n",
     "\n",
-    "+ Using still the *Git Bash* terminal, change into the `fmad2223` folder and set your local Git configuration with these commands (the first one is the folder change from the *Course Folder* to `fmad2223`):\n",
+    "+ Using still the terminal, change into the `fmad2223` folder and set your local Git configuration with these commands (the first one is the folder change from the *Course Folder* to `fmad2223`):\n",
     "\n",
     "  `cd fmad2223`  \n",
     "  `git config --local user.name 'replace_this_with_your_GitHub_username'`  \n",
@@ -138,12 +157,12 @@
    "id": "985719b3",
    "metadata": {},
    "source": [
-    "### Installing Anaconda Python <a name=\"InstallingAnaconda\"></a>\n",
+    "### Installing Python with HomeBrew <a name=\"InstallingHomebrewPython\"></a>\n",
     "\n",
-    "**Important Note:** If you already have a working setup of Anaconda Python (with Python 3.8 or 3.9) then skip to the [*Create a Conda Environment for the Course*](#CreateCondaEnv) subsection. If your Python version is older: get updated, people!\n",
+    "**Important Note:** If you already have a working setup of Python using conda for package and environment management (with Python 3.8 or later) then skip to the [*Create a Conda Environment for the Course*](#CreateCondaEnv) subsection. If your Python version is older: get updated, people!\n",
     "\n",
     "\n",
-    "+ Begin by navigating to the [Anaconda Web Page](https://www.anaconda.com/):\n",
+    "+ Begin by navigating to the [Miniforge GitHub repository](https://github.com/conda-forge/miniforge):\n",
     "\n",
     "    <img src=\"fig/000-WebAnaconda.PNG\" width=50%/>\n",
     "\n",
